--- a/user-service/Makefile
+++ b/user-service/Makefile
@@ -8,4 +8,4 @@ run:
 build:
 	protoc -I. --go_out=plugins=micro:$(GOPATH)/src/github.com/JCFlores93/shippy/user-service \
 		proto/user/user.proto
-	docker build -t user-service .
+	#docker build -t user-service .
